<resources>
    <string name="app_name">musicstream</string>
    <string name="name_song">Name song</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="lyrics">LYRICS</string>
    <string name="_1_37">1:37</string>
    <string name="current_song_title">Current Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="now_paling">Now Playing</string>
    <string name="ralisten">RaListen</string>
    <string name="library">Library</string>
    <string name="home">Home</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_search">Search</string>
    <string name="title">Title</string>
    <string name="search_ramusic">Search RaMusic</string>
    <string name="playlists">Playlists</string>
    <string name="see_all">See All</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="popular_artists">Popular Artists</string>
    <string name="daily_songs">Daily Songs</string>
</resources>
