<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".baseactivity.HomeFragment">

    <include
        android:id="@+id/inc_title_action_bar"
        layout="@layout/title_action_bar"
        app:layout_constraintTop_toTopOf="parent"
        >
    </include>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inc_title_action_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="0dp"
                android:layout_height="55dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/back_top_header"/>

            <TextView
                android:tag="sticky|-hastransparancy"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/back_top_header"
                app:layout_constraintStart_toStartOf="@id/back_top_header"
                app:layout_constraintBottom_toBottomOf="@id/back_top_header"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/title"
                android:textSize="@dimen/header1_text_size"

                android:textStyle="bold"
                android:text="@string/artists"
                android:textColor="@color/FlatWhite"/>

            <TextView
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textColor="#EEE"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/ripple_effect"
                app:layout_constraintTop_toTopOf="@id/back_top_header"
                app:layout_constraintBottom_toBottomOf="@id/back_top_header"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_top_header"
                tools:listitem="@layout/item_feature_playlist"
                tools:orientation="horizontal"
                tools:layoutManager="LinearLayoutManager"
                android:paddingStart="8dp"
                android:paddingLeft="8dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="55dp"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_playlist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/back_top_header_song"/>

            <TextView
                android:tag="sticky|-hastransparancy"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/back_top_header_song"
                app:layout_constraintStart_toStartOf="@id/back_top_header_song"
                app:layout_constraintBottom_toBottomOf="@id/back_top_header_song"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/song_title"
                android:textSize="@dimen/header1_text_size"
                android:textStyle="bold"
                android:text="@string/songs"
                android:textColor="@color/FlatWhite"/>

            <View
                android:id="@+id/refresh_front"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/refresh"
                app:layout_constraintBottom_toBottomOf="@id/refresh"
                app:layout_constraintStart_toStartOf="@id/refresh"
                app:layout_constraintEnd_toEndOf="@id/refresh"
                android:background="@drawable/ripple_effect"/>

            <ImageView
                android:id="@+id/refresh"
                android:layout_width="76dp"
                android:layout_height="55dp"
                app:layout_constraintTop_toTopOf="@id/back_top_header_song"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/back_top_header_song"
                android:src="@drawable/refresh"
                android:padding="18dp"
                android:rotation="180"
                android:tint="#AAF5F5F5"
                android:elevation="1dp"
                />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/back_top_header_song"
                    tools:listitem="@layout/item_song"
                    tools:orientation="vertical"
                    tools:layoutManager="LinearLayoutManager"
                    />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>